# prock

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh
glfw-3.4/: CMakeLists.txt
imgui/: imconfig.h
implot/: implot.h
src/: base.cpp  base.h  imgui_all.cpp  library_reader.cpp  library_reader.h  main.cpp  process_stat.cpp  process_stat.h  ring_buffer.h  state.cpp  state.h  sync.h  themes.h
src/sources/: environ_reader.cpp  environ_reader.h  library_reader.cpp  library_reader.h  on_demand_reader.cpp  on_demand_reader.h  process_stat.cpp  process_stat.h  socket_reader.cpp  socket_reader.h  sync.h
src/views/: brief_table.cpp  brief_table.h  brief_table_logic.cpp  common.h  common_charts.h  common_implot.h  core_chart.cpp  core_chart.h  cpu_chart.cpp  cpu_chart.h  entry.cpp  entry.h  environ_viewer.cpp  environ_viewer.h  full_table.cpp  full_table.h  io_chart.cpp  io_chart.h  library_viewer.cpp  library_viewer.h  mem_chart.cpp  mem_chart.h  menu_bar.cpp  menu_bar.h  net_chart.cpp  net_chart.h  process_host.cpp  process_host.h  process_window_flags.cpp  process_window_flags.h  socket_viewer.cpp  socket_viewer.h  system_cpu_chart.cpp  system_cpu_chart.h  system_io_chart.cpp  system_io_chart.h  system_mem_chart.cpp  system_mem_chart.h  system_net_chart.cpp  system_net_chart.h  (+3 more)
tests/: test_helpers.h  test_main.cpp  test_views.cpp
